# CINDEX

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  README.md  README0.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
code/: pyproject.toml
code/cindex/: cli.py  features.py  forward_select.py  labelize_umap.py  metrics.py
code/cindex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
code/scripts/: replica_train_apply.py
data/examples/: apply_features.csv  cindex_scores.csv  cindex_scores_rep2_t1.csv  df_dt1580_labeled.csv  df_tmid1.csv  df_tmid1_labeled.csv  df_tmid2_labeled.csv  df_tss1.csv  df_tss1_labeled.csv  replica1_labeled.csv  replica2_all.csv  replica2_t1.csv  replica2_t2.csv  test1_plot.py  test_features.csv  train_features.csv  tss1_cindex_scores.csv
docs/: cindex_sample.csv  time_evolution_counts.csv
models/: cindex_model.yaml  cindex_model_rep1.json  cindex_model_replica1_dt1580.yaml  cindex_model_tmid1.yaml
results/: metrics_tss1.json
scripts/: replica_train_apply.py
src/cindex/: __init__.py  model.py
tests/: test_roundtrip.py
tools/: validate_scores.py
tools/descriptors/all_timesteps_p2_ent_q6/: README.txt  p2_all_dts.py
tools/descriptors/all_timesteps_p2_ent_q6/ent/: c1s1run1_300K.data  in.rerun  to_csv.py
tools/descriptors/all_timesteps_p2_ent_q6/p2/: p2_all_dts.py
tools/descriptors/all_timesteps_p2_ent_q6/q6/: boo_all_dts.py
tools/descriptors/one_timestep_all_descriptors/: README.txt  requirements.txt
tools/descriptors/one_timestep_all_descriptors/lammps_rerun/: dump_t2  (+1 more)
(+32 files in other folders)
